--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -11,118 +11,10 @@
 </head>
 <body>
 	<div class="container">
-		<div class="col-md-8 menu" id="basemenu">
-			<h1>1. CHOOSE YOUR BASE</h1>
-			<h3>Pick a base for your meal.</h3>
-			<div class="row">
-				<div class="item" id="base1"><p>White Rice<br>100cal</p></div>
-				<div class="item" id="base2"><p>Whole Grain Rice<br>200cal</p></div>
-				<div class="item" id="base3"><p>Buckwheat Noodles<br>300cal</p></div>
-			</div>
-			<div class="row">
-				<div class="item" id="base4"><p>Tofu<br>100cal</p></div>
-				<div class="item" id="base5"><p>Cabbage<br>200cal</p></div>
-				<div class="item" id="base6"><p>Cauliflower Rice<br>300cal</p></div>
-			</div>
-			<div class="row btn-row">
-				<div class="button" id="basenext">Next</div>
-			</div>
-		</div>
-		<div class="col-md-8 menu" id="sidesmenu">
-			<h1>2. CHOOSE YOUR SIDES</h1>
-			<h3>Pick 5 sides for your DO•SI•RAK.</h3>
-			<div class="selection">
-				<div class="row">
-					<div class="item" id="side1"></div>
-					<div class="item" id="side2"><p></p></div>
-					<div class="item" id="side3"><p></p></div>
-					<div class="item" id="side4"><p></p></div>
-					<div class="item" id="side5"><p></p></div>
-				</div>
-				<div class="row">
-					<div class="item" id="side6"><p></p></div>
-					<div class="item" id="side7"><p></p></div>
-					<div class="item" id="side8"><p></p></div>
-					<div class="item" id="side9"><p></p></div>
-					<div class="item" id="side10"><p></p></div>
-				</div>
-				<div class="row">
-					<div class="item" id="side11"><p></p></div>
-					<div class="item" id="side12"><p></p></div>
-					<div class="item" id="side13"><p></p></div>
-					<div class="item" id="side14"><p></p></div>
-					<div class="item" id="side15"><p></p></div>
-				</div>
-			</div>
-			<div class="row btn-row">
-				<div class="button" id="sideback">Back</div>
-				<div class="button" id="sidenext">Next</div>
-			</div>
-		</div>
-		<div class="col-md-8 menu" id="mainsmenu">
-			<h1>3. CHOOSE YOUR MAINS!</h1>
-			<h3>Choose 1 or 2 sources of protein for your meal.</h3>
-			<div class="selection">
-				<div class="row">
-					<div class="item" id="main1"><p></p></div>
-					<div class="item" id="main2"><p></p></div>
-					<div class="item" id="main3"><p></p></div>
-					<div class="item" id="main4"><p></p></div>
-				</div>
-				<div class="row">
-					<div class="item" id="main5"><p></p></div>
-					<div class="item" id="main6"><p></p></div>
-					<div class="item" id="main7"><p></p></div>
-					<div class="item" id="main8"><p></p></div>
-				</div>
-				<div class="row">
-					<div class="item" id="main9"></div>
-					<div class="item" id="main10"></div>
-				</div>
-			</div>
-			<div class="row btn-row">
-				<div class="button" id="mainsback">Back</div>
-				<div class="button" id="mainsnext">Next</div>
-			</div>
-		</div>
-		<div class="col-md-8 menu" id="confirmmenu">
-			<h1>CONFIRM YOUR ORDER!</h1>
-			<h3>Are you sure that this is what you want?<br>You can still go back and make changes!</h3>
-			<div class="row btn-row">
-				<div class="button" id="confirmback">Back</div>
-				<div class="button" id="confirmnext">CONFIRM ORDER</div>
-			</div>
-		</div>
-		<div class="col-md-8 menu" id="confirmed">
-			<h1>YOUR ORDER HAS BEEN<br>CONFIRMED!</h1>
-			<H3>Please proceed to the counter<br>for payment and collection.</H3>
-			<div class="row btn-row">
-				<div class="button" id="reset">NEW ORDER</div>
-			</div>
-		</div>
-		<div class="col-md-4" id="output">
-			<a href="http://www.dosirak.com.sg" target="_blank"><image src="assets/img/logo.png" id="logo"></image></a>
-			<div id="choices">
-				<h2>Base</h2>
-				<div class="choicediv">
-					<ul id="base"></ul>
-				</div>
-				<h2>Sides</h2>
-				<div class="choicediv">
-					<ul id="sides"></ul>
-				</div>
-				<h2>Mains</h2>
-				<div class="choicediv">
-					<ul id="mains"></ul>
-				</div>
-			</div>
-			<div id="calories">
-				<h2>Your calorie count is:</h2>
-				<h1 id="calcount">0</h1><h1>&nbsp;cal</h1>
-			</div>
-		</div>
-	</div>
+		<% include ingredients %>
 
+		<% include order %>
+	</div>
 
 	<script src="js/dosirak.js"></script>
 </body>
